--- a/templates/patients.html
+++ b/templates/patients.html
@@ -23,9 +23,9 @@
     <table>
       <tr>
         {% for medication in range(1, patient['Prescribed']) %}
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="{{patient['status']}}"></td>
+        <td class="{{patient['status']}}"></td>
+        <td class="{{patient['status']}}"></td>
         {% endfor %}
       </tr>
     </table>
