--- a/static/style.css
+++ b/static/style.css
@@ -9,3 +9,14 @@ div.rooms {
   border: 1px solid #000;
 }
 
+div.rooms td.green {
+  background-color: green; 
+}
+
+div.rooms td.red {
+  background-color: red; 
+}
+
+div.rooms td.orange {
+  background-color: orange; 
+}
